fix unitential shift nav headers

--- a/src/features/accounts-display-density/compact.css
+++ b/src/features/accounts-display-density/compact.css
@@ -1,12 +1,7 @@
-
 .nav-account-row {
      line-height: normal  !important;
      padding: 0.025em 0 !important;
     
-}
-
-.nav-account-name {
-    padding-left: .15em   !important;
 }
 
 .accounts-header-total-inner-label {
