--- a/src/features/accounts-display-density/slim.css
+++ b/src/features/accounts-display-density/slim.css
@@ -4,10 +4,6 @@
      font-size: .85em !important;
 }
 
-.nav-account-name {
-    padding-left: 0px;
-}
-
 .accounts-header-total-inner-label {
     height: 24px;
 }
